--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-three/fiber": "^9.5.0",
     "@tailwindcss/cli": "^4.1.18",
     "clsx": "^2.1.1",
+    "lucide-react": "^0.563.0",
     "motion": "^12.29.2",
     "next": "16.1.5",
     "react": "19.2.3",
@@ -25,6 +26,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/three": "^0.182.0",
     "babel-plugin-react-compiler": "1.0.0",
     "eslint": "^9",
     "eslint-config-next": "16.1.5",
