--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "16.1.5",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "resend": "^4.0.2",
     "simplex-noise": "^4.0.3",
     "tailwind-merge": "^3.4.0",
     "three": "^0.182.0"
