--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.563.0",
     "motion": "^12.29.2",
-    "next": "16.1.5",
-    "react": "19.2.3",
-    "react-dom": "19.2.3",
+    "next": "^16.1.6",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
     "resend": "^4.0.2",
     "simplex-noise": "^4.0.3",
     "tailwind-merge": "^3.4.0",
@@ -30,7 +30,7 @@
     "@types/three": "^0.182.0",
     "babel-plugin-react-compiler": "1.0.0",
     "eslint": "^9",
-    "eslint-config-next": "16.1.5",
+    "eslint-config-next": "^16.1.6",
     "tailwindcss": "^4.1.18",
     "typescript": "^5"
   }
