--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-three/fiber": "^9.5.0",
     "@tailwindcss/cli": "^4.1.18",
+    "@vercel/analytics": "^1.6.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.563.0",
     "motion": "^12.29.2",
